--- a/airs/content/pages/products/rules/list/authentication/226/index.adoc
+++ b/airs/content/pages/products/rules/list/authentication/226/index.adoc
@@ -23,25 +23,31 @@ after a certain number of incorrect log in attempts.
 An attacker can leverage this throttling mechanism to lock a legitimate user
 out of their own account.
 
-. [[r2]] link:https://cwe.mitre.org/data/definitions/307.html[CWE-307: Improper Restriction of Excessive Authentication Attempts].
+. [[r2]] link:http://capec.mitre.org/data/definitions/212.html[CAPEC-212: Functionality Misuse].
+An adversary leverages a legitimate capability of an application in such a way
+as to achieve a negative technical impact.
+The system functionality is not altered or modified but used in a way that was
+not intended.
+
+. [[r3]] link:https://cwe.mitre.org/data/definitions/307.html[CWE-307: Improper Restriction of Excessive Authentication Attempts].
 The software does not implement sufficient measures to prevent multiple failed
 authentication attempts within in a short time frame,
 making it more susceptible to brute force attacks.
 
-. [[r3]] link:https://cwe.mitre.org/data/definitions/645.html[CWE-645: Overly Restrictive Account Lockout Mechanism].
+. [[r4]] link:https://cwe.mitre.org/data/definitions/645.html[CWE-645: Overly Restrictive Account Lockout Mechanism].
 The software contains an account lockout protection mechanism,
 but the mechanism is too restrictive and can be triggered too easily,
 which allows attackers to deny service to legitimate users by causing their
 accounts to be locked out.
 
-. [[r4]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
+. [[r5]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
 Application functions related to authentication and session management are
 often implemented incorrectly,
 allowing attackers to compromise passwords, keys, or session tokens,
 or to exploit other implementation flaws to assume other users' identities
 temporarily or permanently.
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.2 General Authenticator Requirements.(2.2.1)]
 Verify that anti-automation controls are effective at mitigating breached
 credential testing, brute force, and account lockout attacks.
@@ -53,6 +59,6 @@ recent attempts to unlock the account, or similar.
 Verify that no more than 100 failed attempts per hour is possible on a single
 account.
 
-. [[r6]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
+. [[r7]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
 Address common coding vulnerabilities in software-development processes such as
 broken authentication and session management.
