--- a/airs/content/pages/products/rules/list/authorization/095/index.adoc
+++ b/airs/content/pages/products/rules/list/authorization/095/index.adoc
@@ -33,16 +33,20 @@ non-privileged accounts.
 Access to sensitive information and functionality must be controlled to ensure
 that only authorized users are able to access these resources.
 
-. [[r2]] link:https://cwe.mitre.org/data/definitions/250.html[CWE-250: Execution with Unnecessary Privileges]
+. [[r2]] link:http://capec.mitre.org/data/definitions/233.html[CAPEC-233: Privilege Escalation].
+An adversary exploits a weakness enabling them to elevate their privilege and
+perform an action that they are not supposed to be authorized to perform.
+
+. [[r3]] link:https://cwe.mitre.org/data/definitions/250.html[CWE-250: Execution with Unnecessary Privileges]
 The software performs an operation at a privilege level that is higher than the
 minimum level required,
 which creates new weaknesses or amplifies the consequences of other weaknesses.
 
-. [[r3]] link:https://cwe.mitre.org/data/definitions/276.html[CWE-276: Incorrect Default Permissions].
+. [[r4]] link:https://cwe.mitre.org/data/definitions/276.html[CWE-276: Incorrect Default Permissions].
 The product, upon installation, sets incorrect permissions for an object that
 exposes it to an unintended actor.
 
-. [[r4]] link:https://www.law.cornell.edu/cfr/text/45/164.308[HIPAA Security Rules 164.308(a)(3)(i):]
+. [[r5]] link:https://www.law.cornell.edu/cfr/text/45/164.308[HIPAA Security Rules 164.308(a)(3)(i):]
 Workforce Security: Implement policies and procedures
 to ensure that all members of its workforce have appropriate access
 to electronic protected health information,
@@ -51,57 +55,57 @@ and to prevent those workforce members who do not have access
 under paragraph (a)(4) of this section
 from obtaining access to electronic protected health information.
 
-. [[r5]] link:https://www.law.cornell.edu/cfr/text/45/164.310[HIPAA Security Rules 164.310(a)(2)(iii):]
+. [[r6]] link:https://www.law.cornell.edu/cfr/text/45/164.310[HIPAA Security Rules 164.310(a)(2)(iii):]
 Access Control and Validation Procedures: Implement procedures
 to control and validate a person's access to facilities
 based on their role or function, including visitor control,
 and control of access to software programs for testing and revision.
 
-. [[r6]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (6)]
+. [[r7]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (6)]
 The information system implements the following
 dynamic privilege management capabilities:
 [Assignment: organization-defined list
 of dynamic privilege management capabilities].
 
-. [[r7]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (7) a]
+. [[r8]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (7) a]
 The organization establishes and administers privileged user accounts
 in accordance with a role-based access scheme
 that organizes allowed information system access and privileges into roles.
 
-. [[r8]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (7) b]
+. [[r9]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (7) b]
 The organization monitors privileged role assignments.
 
-. [[r9]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (7) c]
+. [[r10]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (7) c]
 The organization Takes [Assignment: organization-defined actions]
 when privileged role assignments are no longer appropriate.
 
-. [[r10]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A5-Broken_Access_Control[OWASP Top 10 A5:2017-Broken Access Control].
+. [[r11]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A5-Broken_Access_Control[OWASP Top 10 A5:2017-Broken Access Control].
 Restrictions on what authenticated users are allowed to do are often not
 properly enforced.
 Attackers can exploit these flaws to access unauthorized functionality and/or
 data, such as access other users' accounts, view sensitive files,
 modify other users' data, change access rights, etc.
 
-. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r12]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V4.1 General Access Control Design.(4.1.4)]
 Verify that the principle of deny by default exists whereby new users/roles
 start with minimal or no permissions and users/roles do not receive access to
 new features until access is explicitly assigned.
 
-. [[r12]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.8]
+. [[r13]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.8]
 Address common coding vulnerabilities in software-development processes
 including improper access control
 (such as insecure direct object references, failure to restrict URL access,
 directory traversal, and failure to restrict user access to functions).
 
-. [[r13]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 7.1.1]
+. [[r14]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 7.1.1]
 Define access needs for each role,
 including level of privilege required (for example, user, administrator, etc.)
 for accessing resources.
 
-. [[r14]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 7.1.3]
+. [[r15]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 7.1.3]
 Assign access based on individual personnel's job classification and function.
 
-. [[r15]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 7.2.2]
+. [[r16]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 7.2.2]
 This access control system(s) must include assignment of privileges to
 individuals based on job classification and function.
