airs\feat(doc): #3148.46 add capec refs to some rules
- Added CAPEC references to R262, R160, R043 and R337
- Updated R043 keywords


Former-commit-id: 7aad19d8c3ea6021ce2e26550624656ae5edbdc8

--- a/airs/content/pages/products/rules/list/source/160/index.adoc
+++ b/airs/content/pages/products/rules/list/source/160/index.adoc
@@ -72,20 +72,24 @@ An adversary exploits weaknesses in input validation by manipulating resource
 identifiers enabling the unintended modification or specification of a
 resource.
 
-. [[r8]] link:https://cwe.mitre.org/data/definitions/20.html[CWE-20: Improper Input Validation].
+. [[r8]] link:http://capec.mitre.org/data/definitions/242.html[CAPEC-242: Code Injection].
+An adversary exploits a weakness in input validation on the target to inject
+new code into that which is currently executing.
+
+. [[r9]] link:https://cwe.mitre.org/data/definitions/20.html[CWE-20: Improper Input Validation].
 The product does not validate or incorrectly validates input that can affect
 the control flow or data flow of a program.
 
-. [[r9]] link:https://cwe.mitre.org/data/definitions/79.html[CWE-79: Cross-site Scripting].
+. [[r10]] link:https://cwe.mitre.org/data/definitions/79.html[CWE-79: Cross-site Scripting].
 The software does not neutralize or incorrectly neutralizes user-controllable
 input before it is placed in output that is used as a web page that is served
 to other users.
 
-. [[r10]] link:https://cwe.mitre.org/data/definitions/116.html[CWE-116: Improper Encoding or Escaping of Output].
+. [[r11]] link:https://cwe.mitre.org/data/definitions/116.html[CWE-116: Improper Encoding or Escaping of Output].
 The product does not validate or incorrectly validates input that can affect
 the control flow or data flow of a program.
 
-. [[r11]] link:https://cwe.mitre.org/data/definitions/117.html[CWE-117: Improper Output Neutralization for Logs].
+. [[r12]] link:https://cwe.mitre.org/data/definitions/117.html[CWE-117: Improper Output Neutralization for Logs].
 The software does not neutralize or incorrectly neutralizes output that is
 written to logs.
 
