airs\feat(doc): #3148.48 add capec refs to some rules
- Added CAPEC references to R321, R169, R050, R117, R044,
R344, R336 and R224
- Fixed some minor typos
- Updated R117 keywords


Former-commit-id: 94599bd4681d92ce6a0650e3c3b5983e270029f2

--- a/airs/content/pages/products/rules/list/architecture/050/index.adoc
+++ b/airs/content/pages/products/rules/list/architecture/050/index.adoc
@@ -41,6 +41,10 @@ their malicious goals.
 An adversary exploits a weakness on the target to force arbitrary code to be
 retrieved locally or from a remote location and executed.
 
+. [[r4]] link:http://capec.mitre.org/data/definitions/242.html[CAPEC-242: Code Injection].
+An adversary exploits a weakness in input validation on the target to inject
+new code into that which is currently executing.
+
 . [[r4]] link:https://cwe.mitre.org/data/definitions/829.html[CWE-829: Inclusion of Functionality from Untrusted Control Sphere].
 The software imports, requires, or includes executable functionality
 (such as a library) from a source that is outside of the intended control
