--- a/airs/content/pages/products/rules/list/cryptography/224/index.adoc
+++ b/airs/content/pages/products/rules/list/cryptography/224/index.adoc
@@ -65,6 +65,12 @@ Alternatively, an adversary may intercept a message from a legitimate sender
 and attempt to make it look like the message comes from them without changing
 its content.
 
+. [[r5]] link:http://capec.mitre.org/data/definitions/272.html[CAPEC-272: Protocol Manipulation].
+An adversary subverts a communications protocol to perform an attack.
+This type of attack targets invalid assumptions that may be inherent in
+implementers of the protocol, incorrect implementations of the protocol,
+or vulnerabilities in the protocol itself.
+
 . [[r5]] link:https://cwe.mitre.org/data/definitions/327.html[CWE-327: Use of a Broken or Risky Cryptographic Algorithm]
 The use of a broken or risky cryptographic algorithm is an unnecessary risk
 that may result in the exposure of sensitive information.
