--- a/airs/content/pages/products/rules/list/cryptography/336/index.adoc
+++ b/airs/content/pages/products/rules/list/cryptography/336/index.adoc
@@ -51,6 +51,12 @@ as to achieve a negative technical impact.
 The system functionality is not altered or modified but used in a way that was
 not intended.
 
+. [[r4]] link:http://capec.mitre.org/data/definitions/272.html[CAPEC-272: Protocol Manipulation].
+An adversary subverts a communications protocol to perform an attack.
+This type of attack targets invalid assumptions that may be inherent in
+implementers of the protocol, incorrect implementations of the protocol,
+or vulnerabilities in the protocol itself.
+
 . [[r4]] link:https://cwe.mitre.org/data/definitions/319.html[CWE-319: Cleartext Transmission of Sensitive Information].
 The software transmits sensitive or security-critical data in cleartext in a
 communication channel that can be sniffed by unauthorized actors.
