--- a/airs/content/pages/products/rules/list/files/041/index.adoc
+++ b/airs/content/pages/products/rules/list/files/041/index.adoc
@@ -36,6 +36,10 @@ and standard web content like PDF and multimedia files.
 An attacker modifies file contents or attributes (such as extensions or names)
 of files in a manner to cause incorrect processing by an application.
 
+. [[r4]] link:http://capec.mitre.org/data/definitions/549.html[CAPEC-549: Local Execution of Code].
+An adversary installs and executes malicious code on the target system in an
+effort to achieve a negative technical impact.
+
 . [[r4]] link:https://cwe.mitre.org/data/definitions/509.html[CWE-509: Replicating Malicious Code (Virus or Worm)].
 Replicating malicious code, including viruses and worms, will attempt to attack
 other systems once it has successfully compromised the target system or
